Add a signature and input example for the logged model !!

--- a/notebook/StackedModel.ipynb
+++ b/notebook/StackedModel.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,8 @@
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "from mlflow.models.signature import infer_signature\n"
    ]
   },
   {
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +580,12 @@
     "            f.write(class_report_text)\n",
     "        mlflow.log_artifact(\"classification_report.txt\")\n",
     "        # Log model\n",
-    "        mlflow.sklearn.log_model(model, \"model\")\n",
+    "        # Infer signature and create an input example\n",
+    "        input_example = X_train.iloc[:1]  # Use first sample for input example\n",
+    "        signature = infer_signature(X_train, model.predict(X_train))\n",
+    "\n",
+    "        # Log model with signature & input example\n",
+    "        mlflow.sklearn.log_model(model, \"model\", signature=signature, input_example=input_example)\n",
     "\n",
     "        # Log confusion matrix as an image\n",
     "        plt.figure(figsize=(6, 4))\n",
