--- a/notebook/StackedModel.ipynb
+++ b/notebook/StackedModel.ipynb
@@ -1973,7 +1973,7 @@
    "source": [
     "shap_values_2d = shap_values_test[:, :, 1]  # Now shape (100, 19)\n",
     "\n",
-    "# Create plot\n",
+    
     "fig, ax = plt.subplots(figsize=(6,6), dpi=100)\n",
     "shap.dependence_plot(\n",
     "    \"Contract\",\n",
@@ -2012,8 +2012,8 @@
     "fig, ax = plt.subplots(figsize=(6,6), dpi=100)\n",
     "shap.dependence_plot(\n",
     "    \"InternetService\",\n",
-    "    shap_values_2d,  # Use 2D version\n",
-    "    X_test.iloc[:100],  # Match sample size\n",
+    "    shap_values_2d, \n",
+    "    X_test.iloc[:100],  \n",
     "    interaction_index=\"auto\",\n",
     "    ax=ax\n",
     ")"
@@ -2046,8 +2046,8 @@
     "fig, ax = plt.subplots(figsize=(6,6), dpi=100)\n",
     "shap.dependence_plot(\n",
     "    \"OnlineSecurity\",\n",
-    "    shap_values_2d,  # Use 2D version\n",
-    "    X_test.iloc[:100],  # Match sample size\n",
+    "    shap_values_2d, \n",
+    "    X_test.iloc[:100], \n",
     "    interaction_index=\"auto\",\n",
     "    ax=ax\n",
     ")"
